2010-04-21  Keith Francois <francois.keith@aist.go.jp>

	Add missing file required to install the headers of core-plugin-ipopt
	* msvc/INSTALL/excludedFiles.txt: prevents the installation of some files 
		considering their extension, required for the Install command

2010-04-14  Thomas Moulard  <thomas.moulard@gmail.com>

	Uniformize behavior on Windows and Unix.
	* src/roboptim-core-ipopt-plugin.cc: Merge Windows and Linux
	specific constructors.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Add rpm SPEC file.
	* Makefile.am: Enable rpm rules.
	* roboptim-core-ipopt-plugin.spec.in: New.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Update documentation.
	* .gitmodules: Remove old doc submodule.
	* doc/Doxyfile.extra.in: New.
	* doc/Makefile.am: New.
	* doc: Remove.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Update buildchain.
	* .gitignore: Ignore more files (like ``.version'').
	* Makefile.am: Factorize rules.
	* build-aux: Synchronize.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Upgrade to RobOptim core 0.5.6.

        CAUTION: starting from now, $(libdir)/roboptim-core /MUST/
        be in your LT_LIBRARY_PATH! It is also recommended to remove
        manually your old $(libdir)/roboptim-core-ipopt* files.

	* configure.ac: Require newer roboptim-core.
	* include/roboptim/core/plugin/ipopt.hh:
	Declare parameters management methods.
	* src/Makefile.am: Install plug-in in separate directory.
	* src/roboptim-core-ipopt-plugin.cc: Management parameters properly.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-08-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new SourceForge URLs.
	* .gitmodules: Update to new URLs.
	* bootstrap: Detect new alias.

2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Disable gcov support in plug-in.
	* src/Makefile.am: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle submodule and check for git.
	* bootstrap: Here.
